--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# The Site Configuration
+﻿# The Site Configuration
 
 # Import the theme
 theme: jekyll-theme-chirpy
@@ -18,9 +18,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Control Forge # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Industrial automation revisited # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -37,8 +37,8 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Safar zitoun Zine eddine
+  email: ze.safarz@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
