--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ description: >- # used by seo meta and the atom feed
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ""
 
-github:
-  username: github_username # change to your github username
+#github:
+#  username: github_username # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+#twitter:
+#  username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
@@ -76,7 +76,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: 'https://media.licdn.com/dms/image/D4D03AQEW4-PXTNpb2A/profile-displayphoto-shrink_800_800/0/1665133040021?e=1696464000&v=beta&t=8rLrVkRMoUZLLDsQClaJ7GAKKdzkL-3_tann-xAQAVc'
 
 # boolean type, the global switch for TOC in posts.
 toc: true
