--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 'https://media.licdn.com/dms/image/D4D03AQEW4-PXTNpb2A/profile-displayphoto-shrink_800_800/0/1665133040021?e=1696464000&v=beta&t=8rLrVkRMoUZLLDsQClaJ7GAKKdzkL-3_tann-xAQAVc'
+avatar: './avtr.jpg'
 
 # boolean type, the global switch for TOC in posts.
 toc: true
