--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone:
 
 title: Control Forge # the main title
 
-tagline: Demystifying Automation # it will display as the sub-title
+tagline: Demystifying Automation. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
